--- a/src/assets/scss/_variable.scss
+++ b/src/assets/scss/_variable.scss
@@ -1,24 +1,17 @@
-// 
 // Custom layout variables
-// 
 @import url("https://fonts.googleapis.com/css?family=Poppins:400,500,300,600,700");
 
-// 
 // Theme Global setting colors
-// 
-$themecolor: #2962ff;
-$themecolor-dark: #028ee1;
-$themecolor-alt: #26c6da;
+$themecolor: #800f0f;  // Red
+$themecolor-dark: #660a0a; // Dark Red
+$themecolor-alt: #f2e082;  // Yellow
 $theme-light: #fff;
-$theme-dark: #212529;
+$theme-dark: #292121;
 
-$skin5: #272c33;
-$skin6: #fff;
+$skin5: #a31212;
+$skin6: $theme-light;
 
-// 
 // Topbar settings
-// 
-
 $topbar: $theme-light;
 $topbar-height: 64px;
 $topbar-navlink-padding: 0px 14px;
@@ -26,10 +19,7 @@ $topbar-navlink-font-size: 1rem;
 $topbar-navlink-height: 64px;
 $topbar-navbrand-padding: 0 10px 0 10px;
 
-// 
 // Sidebar settings
-// 
-
 $sidebar: $theme-light;
 $sidebar-text: #fff;
 $sidebar-icons: #fff;
@@ -39,25 +29,19 @@ $sidebar-icons-dark: #4f5467;
 $sidebar-width-full: 250px;
 $sidebar-width-mini: 65px;
 
-// 
 // Layout settings
-// 
 $page-wrapper-max-width: 1300px;
 
-// 
 // Common settings
-// 
 $shadow: 1px 0px 20px rgba(0, 0, 0, 0.08);
 $transitions: 0.2s ease-in;
 $transparent-dark-bg: rgba(0, 0, 0, 0.05);
 
-// 
 // Bootstrap override colors
-// 
 $white: #fff !default;
 $gray-100: #f3f5f7 !default;
 $gray-200: #f3f5f7 !default;
-$gray-300: #a6b7bf !default;
+$gray-300: #afbfa6 !default;
 $gray-400: #ced4da !default;
 $gray-500: #98a6ad !default;
 $gray-600: #cccccc !default;
@@ -70,13 +54,13 @@ $blue: #03a9f3 !default;
 $indigo: #6610f2 !default;
 $purple: #7460ee !default;
 $pink: #e83e8c !default;
-$red: #fb9678 !default;
+$red: #800f0f !default;  // Red
 $orange: #fb8c00 !default;
-$yellow: #fec107 !default;
+$yellow: #f2e082 !default;  // Yellow
 $green: #00c292 !default;
 $teal: #20c997 !default;
 $cyan: #4fc3f7 !default;
-$primary: #7460ee !default;
+$primary: #800f0f !default;  // Red
 $inverse: #4c5667 !default;
 
 $light-danger: #f9e7eb;
@@ -93,9 +77,9 @@ $colors: (
   "indigo": $indigo,
   "purple": $purple,
   "pink": $pink,
-  "red": $red,
+  "red": $red,  // Red
   "orange": $orange,
-  "yellow": $yellow,
+  "yellow": $yellow,  // Yellow
   "green": $green,
   "teal": $teal,
   "cyan": $cyan,
@@ -104,12 +88,12 @@ $colors: (
   "gray-dark": $gray-800,
 );
 
-$primary: $blue!default;
+$primary: $red!default;  // Red
 $secondary: $gray-600 !default;
 $success: $green !default;
 $info: #3699ff !default;
-$warning: $yellow !default;
-$danger: $red !default;
+$warning: $yellow !default;  // Yellow
+$danger: $red !default;  // Red
 $light: $gray-100 !default;
 $dark: $gray-800 !default;
 $muted: $gray-500 !default;
@@ -123,8 +107,8 @@ $theme-colors: map-merge(
     "secondary": $secondary,
     "success": $success,
     "info": $info,
-    "warning": $warning,
-    "danger": $danger,
+    "warning": $warning,  // Yellow
+    "danger": $danger,  // Red
     "light": $light,
     "dark": $dark,
     "muted": $muted,
@@ -141,9 +125,7 @@ $theme-colors: map-merge(
   $theme-colors
 );
 
-// 
-// Enable optional
-// 
+// Enable optional settings
 $enable-caret: true !default;
 $enable-rounded: true !default;
 $enable-shadows: false !default;
@@ -154,17 +136,13 @@ $enable-grid-classes: true !default;
 $enable-print-styles: true !default;
 $enable-negative-margins: true;
 
-// 
 // Body
-// 
-$main-body-bg: #fff !default;
+$main-body-bg: $theme-light !default;
 $body-bg: #edf1f5;
 $body-color: #686868 !default;
 $grid-gutter-width: 30px !default;
 
-// 
 // Typography
-// 
 $font-size-base: 1rem;
 $font-family-sans-serif: "Poppins", sans-serif !default;
 $font-weight-light: 300 !default;
@@ -178,7 +156,6 @@ $h3-font-size: 24px !default;
 $h4-font-size: 18px !default;
 $h5-font-size: 16px !default;
 $h6-font-size: 14px !default;
-
 
 $headings-margin-bottom: 8px !default;
 $headings-font-weight: 400 !default;
@@ -205,18 +182,14 @@ $display-font-sizes: (
   7: 2rem
 ) !default;
 
-// 
 // Cards
-// 
 $card-border-width: 0px !default;
 $card-border-color: #d7dfe3 !default;
 $card-border-radius: 0px !default;
 $card-spacer-y: 1.25rem !default;
 $card-spacer-x: 1.25rem !default;
 
-// 
 // Buttons
-// 
 $btn-secondary-border: $gray-300;
 $btn-border-radius: 4px !default;
 $btn-border-radius-sm: 4px !default;
@@ -225,14 +198,10 @@ $btn-box-shadow: none !default;
 $btn-focus-box-shadow: none !default;
 $btn-close-focus-shadow:     none !default;
 
-// 
 // Progressbar
-// 
 $progress-bg: $gray-100;
 
-// 
 // Tables
-// 
 $table-bg-accent: $gray-100;
 $table-bg-hover: $gray-100;
 $table-hover-bg: $gray-100 !default;
@@ -242,9 +211,7 @@ $table-border-color: $gray-200;
 $table-striped-bg: $light !default;
 $table-group-separator-color: $gray-200;
 
-// 
 // Components
-// 
 $component-active-color: $white !default;
 $component-active-bg: $themecolor !default;
 $badge-pill-padding-x: 0.2em !default;
@@ -252,10 +219,7 @@ $badge-pill-padding-y: 1em !default;
 $badge-font-size: 0.75rem !default;
 $badge-font-weight: 400 !default;
 
-// 
-// border
-// 
-
+// Border
 $border-width: 1px !default;
 $border-color: $gray-200 !default;
 $border-radius: 4px !default;
@@ -263,25 +227,18 @@ $border-radius-lg: 5px !default;
 $border-radius-sm: 1px !default;
 
 // Dropdowns
-
 $dropdown-item-padding-x: 1rem !default;
 $dropdown-item-padding-y: 0.65rem !default;
 $dropdown-border-color: $gray-200;
 $dropdown-divider-bg: $gray-100;
 
-// 
 // Progressbars
-// 
 $progress-height: 5px !default;
 
-// 
 // Tabs
-// 
 $nav-tabs-link-active-bg: $white !default;
 
-// 
 // Grid breakpoints
-// 
 $grid-breakpoints: (
   xs: 0,
   sm: 576px,
@@ -290,8 +247,6 @@ $grid-breakpoints: (
   xl: 1600px,
 ) !default;
 
-// 
 // Navbar
-// 
 $navbar-dark-color: rgba($white, 0.8) !default;
 $navbar-dark-hover-color: rgba($white, 1) !default;
