--- a/src/assets/FrontOffice/scss/_components.scss
+++ b/src/assets/FrontOffice/scss/_components.scss
@@ -72,7 +72,8 @@
 }
 /* Ensure the image stretches to cover the top of the page */
 .full-image {
-  width: 100%;       /* Stretch to full width */
+  width: 100%;  
+  height: 100;     /* Stretch to full width */
   height: 45vh;      /* Set height of the first image */
   object-fit: cover; /* Ensure the image covers the area */
   margin-bottom: 30px;  /* Add space between the first image and the content below */
