--- a/src/app/Shared/landing-page/landing-page.component.html
+++ b/src/app/Shared/landing-page/landing-page.component.html
@@ -1,8 +1,8 @@
-<div class="container-fluid">
+<div class="container-fluid" >
     <!-- Add Image at the top of the page -->
-    <div class="row">
-      <div class="col-12">
-        <img src="assets/FrontOffice/images/bg/speedy.png" alt="Banner Image" class="img-fluid" />
+    <div class="row" style="padding:0px !important">
+      <div class="col-12" style="padding:0px !important">
+        <img src="assets/FrontOffice/images/bg/speedy.png" style="width: 1200px;" alt="Banner Image" class="img-fluid" />
       </div>
     </div>
   
