--- a/src/app/Shared/layouts/full/full.component.html
+++ b/src/app/Shared/layouts/full/full.component.html
@@ -26,10 +26,10 @@
       </a>
       
       <!-- Logo -->
-      <a class="navbar-brand" href="/">
+      <a class="navbar-brand"   href="/">
         <!-- Logo icon -->
-        <b class="logo-icon">
-          <img src="assets/FrontOffice/images/logos/SpeedyGo (10).png" alt="homepage" class="dark-logo" />
+        <b class="logo-icon" style="width : 1200px">
+          <img src="assets/FrontOffice/images/logos/SpeedyGo (10).png" alt="homepage"  style="width : 1200px" class="dark-logo" />
         </b>
       </a>
       
@@ -75,7 +75,7 @@
     <!-- ============================================================== -->
     <!-- Container fluid  -->
     <!-- ============================================================== -->
-    <div class="container-fluid">
+    <div class="container-fluid" >
       <!-- ============================================================== -->
       <!-- Start Page Content -->
       <!-- ============================================================== -->
