--- a/src/assets/DriverInterface/scss/core/layout/_layout.scss
+++ b/src/assets/DriverInterface/scss/core/layout/_layout.scss
@@ -16,7 +16,7 @@
 }
 
 .page-wrapper > .container-fluid {
-  padding: 20px;
+  padding: 0px !important;
   min-height: calc(100vh - 180px);
   max-width: $page-wrapper-max-width;
   margin: 0 auto;
