--- a/src/assets/BackOffice/scss/_components.scss
+++ b/src/assets/BackOffice/scss/_components.scss
@@ -163,6 +163,6 @@
 .lead {
   font-size: 1.2rem;
   line-height: 1.6;
-  color: white;  /* Paragraph text is white */
+  color: rgb(51, 49, 49);  /* Paragraph text is white */
 }
 
