--- a/src/app/Shared/shared/header/navigation.component.html
+++ b/src/app/Shared/shared/header/navigation.component.html
@@ -1,32 +1,22 @@
-<!-- ============================================================== -->
-<!-- toggle and nav items -->
-<!-- ============================================================== -->
-<ul class="navbar-nav float-start me-auto">
-  <!-- Removed "Starter" and "About" links -->
-</ul>
-
-<!-- ============================================================== -->
 <!-- Right side toggle and nav items -->
-<!-- ============================================================== -->
 <ul class="navbar-nav float-end">
   <!-- ============================================================== -->
-  <!-- User profile and notification -->
+  <!-- Notification icon (Only shown when logged in) -->
   <!-- ============================================================== -->
-  <li class="nav-item">
-    <!-- Notification icon -->
+  <li class="nav-item" *ngIf="isLoggedIn">
     <a class="nav-link waves-effect waves-dark" href="javascript:void(0)">
       <i class="bi bi-bell fs-4"></i> <!-- Notification bell icon -->
     </a>
   </li>
+
   <!-- ============================================================== -->
-  <!-- User profile -->
+  <!-- User profile (Only shown when logged in) -->
   <!-- ============================================================== -->
-  <li class="nav-item" ngbDropdown placement="bottom-end">
+  <li class="nav-item" ngbDropdown placement="bottom-end" *ngIf="isLoggedIn">
     <a
       ngbDropdownToggle
       class="nav-link waves-effect waves-dark pro-pic"
       href="javascript:void(0)"
-      data-toggle="dropdown"
       aria-haspopup="true"
       aria-expanded="false"
     >
@@ -36,16 +26,24 @@
         class="rounded-circle"
         width="31"
       />
-      <span class="ms-2">John Deo</span>
+      <span class="ms-2">{{ username }}</span>
     </a>
     <div class="dropdown-menu-right" ngbDropdownMenu>
-      <a class="dropdown-item" href="javascript:void(0)"> My Profile</a>
-      <a class="dropdown-item" href="javascript:void(0)"> My Balance</a>
-      <a class="dropdown-item" href="javascript:void(0)"> Inbox</a>
+      <a class="dropdown-item" [routerLink]="'/profile'">My Profile</a> <!-- Added routerLink for profile -->
+      <a class="dropdown-item" href="javascript:void(0)">My Balance</a>
+      <a class="dropdown-item" href="javascript:void(0)">Inbox</a>
       <div class="dropdown-divider"></div>
-      <a class="dropdown-item" href="javascript:void(0)"> Account Setting</a>
-      <div class="dropdown-divider"></div>
-      <a class="dropdown-item" href="javascript:void(0)"> Logout</a>
+      <a class="dropdown-item" href="javascript:void(0)" (click)="logout()">Logout</a>
     </div>
+  </li>
+
+  <!-- ============================================================== -->
+  <!-- Login and Signup (Only shown when logged out) -->
+  <!-- ============================================================== -->
+  <li class="nav-item" *ngIf="!isLoggedIn">
+    <a class="nav-link" [routerLink]="'/login'">Login</a>
+  </li>
+  <li class="nav-item" *ngIf="!isLoggedIn">
+    <a class="nav-link" [routerLink]="'/signup'">Signup</a>
   </li>
 </ul>
